cabal-version:      2.4
name:               advent-of-code
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Alexandre Maille
maintainer:         alexandre.maille.ext@oscaro.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        MyLib
      , Day1
      , Day2
      , Day3
      , Day4
      , Day5
      , Day6
      , Day7
      , Day8
      , Day9

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0
      , containers
      , parsec
      , bytestring
    hs-source-dirs:   src
    ghc-options: -fno-warn-incomplete-uni-patterns
    default-language: Haskell2010

executable advent-of-code
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0,
        advent-of-code

    hs-source-dirs:   app
    default-language: Haskell2010
